  * check-mir, check-symbols, grep-merges, pbuilder-dist-simple,
    setup-packaging-environment, submittodebian, ubuntu-iso:
    Do enough argument parsing to handle --help (LP: #988009)
  * dgetlp: Require a UTF-8 locale, or it'll crash when displaying errors
    (LP: #979117)
  * pbuilder-dist: Don't try to enable -updates for Debian testing
    (LP: #993006)

 -- Stefano Rivera <stefanor@debian.org>  Wed, 25 Apr 2012 17:38:58 +0200

ubuntu-dev-tools (0.141) unstable; urgency=low

  * syncpackage: Log into Launchpad anonymously with --no-lp
    (LP: #979849)
  * seeded-in-ubuntu: Log into Launchpad anonymously.

 -- Stefano Rivera <stefanor@debian.org>  Thu, 12 Apr 2012 23:46:24 +0200

ubuntu-dev-tools (0.140) unstable; urgency=low

  [ Stefano Rivera ]
  * Bump Standards-Version to 3.9.3, no changes needed.
  * Update machine-readable copyright Format to 1.0.
  * pbuilder-dist: Use the same chroot, whether the system-architecture was
    the supplied architecture or was chosen by default (LP: #943435)
  * backportpackage
    - Prompt to delete existing workdirs (LP: #885514)
    - Support a BACKPORTPACKAGE_UPLOAD configuration/enviornment variable
      (LP: #693217)
  * requestsync:
    - New packages from non-free or contrib go into multiverse (LP: #935643)
    - Catch SeriesNotFoundException and display a friendly error (LP: #963888)

  [ Daniel Hahler ]
  * ubuntutools/archive.py: use ProxyHandler in _download_file.
    This makes use of the system proxy (e.g. http_proxy).
  * pbuilder-dist: Do not force default value for `--aptcache` argument
    (LP: #956903)

  [ John S Gruber ]
  * Don't use --override-config with operations other than update.
    (LP: #409696)

 -- Stefano Rivera <stefanor@debian.org>  Thu, 29 Mar 2012 00:01:40 +0200

ubuntu-dev-tools (0.139) unstable; urgency=low

  [ Stefano Rivera ]
  * syncpackage, backportpackage, sponsor-patch: Use -nc when building source
    packages. Avoids needing build-deps on the build machine.